finish login/register and appointment

--- a/PetServicesStore/Views/Default/index.cshtml
+++ b/PetServicesStore/Views/Default/index.cshtml
@@ -6,7 +6,6 @@
    Author: W3layouts
    Author URL: http://w3layouts.com
 -->
-
 <section class="w3l-hero-headers-9">
     <div class="slide header11" data-selector="header11">
         <div class="container">
@@ -182,29 +181,29 @@
                     </div>
                 </div>
                 <div class="apply-form p-sm-5 p-4">
-                    <form action="#" method="post">
+                    <form action="initAppointment" method="post">
                         <div class="admission-form">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Full Name*" required="">
+                                <input type="text" class="form-control" name="dog_name" placeholder="Dog's Name*" required>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Phone Number*" required="">
+                                <input type="text" class="form-control" name="dog_kind" placeholder="Dog's kind" required>
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control" placeholder="Email*" required="">
+                                <input type="date" class="form-control" name="appointed_date" required>
                             </div>
-                            <select class="form-control">
-                                <option>Service Type</option>
-                                <option>Ear Cleaning</option>
-                                <option>Clipping Fur</option>
-                                <option>Brushing</option>
-                                <option>Nail Trim</option>
-                                <option>Grooming Program</option>
-                                <option>Others</option>
+                            <select class="form-control" name="services">
+                                <option value="">Service Type</option>
+                                <option value="Ear Cleaning">Ear Cleaning</option>
+                                <option value="Clipping Fur">Clipping Fur</option>
+                                <option value="Brushing">Brushing</option>
+                                <option value="Nail Trim">Nail Trim</option>
+                                <option value="Grooming Program">Grooming Program</option>
+                                <option value="Others">Others</option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <textarea name="Comment" class="form-control" placeholder="Message*" required=""></textarea>
+                            <textarea name="msg" class="form-control" placeholder="Message" required></textarea>
                         </div>
                         <div class="text-right">
                             <button type="submit" class="btn btn-primary submit action-button">Submit Now</button>
