--- a/PetServicesStore/Content/css/login.css
+++ b/PetServicesStore/Content/css/login.css
@@ -1,8 +1,13 @@
-﻿.login-form-container {
+﻿#login-form-inner{
     height: 521px;
     transform: scale(1.5,1.5);
 }
 
-.container-fluid {
-    overflow: hidden;
+#register-form-inner {
+    height: 590px;
+    transform: scale(1.4,1.4);
+}
+
+#register-result {
+    transform: translate(-150px, -30px);
 }
