--- a/PetServicesStore/Views/Login/Login.cshtml
+++ b/PetServicesStore/Views/Login/Login.cshtml
@@ -3,19 +3,20 @@
     Layout = "~/Views/Shared/navigation.cshtml";
     ViewBag.Title = "Login";
 }
-    <div class="container-fluid">
-        <div class="login-form-container row justify-content-center align-items-center">
+    <div class="container-fluid overflow-hidden">
+        <div class="login-form-container row justify-content-center align-items-center" id="login-form-inner">
             <form action="CheckUserName" method="post">
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username"/>
+                    <input type="text" class="form-control" id="username" name="username"/>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" aria-describedby="passwordHelp"/>
+                    <input name="password" type="password" class="form-control" id="password" aria-describedby="passwordHelp"/>
                     <small id="passwordHelp" class="form-text text-muted">Password need to include normall charracter, capitalized and number </small>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-success">Login</button>
+                <a href="@Url.Action("RegisterForm","Login")" class="btn btn-primary">Register</a>
             </form>
         </div>
     </div>
