--- a/PetServicesStore/Views/Shared/navigation.cshtml
+++ b/PetServicesStore/Views/Shared/navigation.cshtml
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html>
+@using System.Threading;
 
 <html lang="en">
 <head>
@@ -10,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:400,700,700i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f4d41ac120.js" crossorigin="anonymous"></script>
 </head>
 <body id="home">
     @Scripts.Render("~/bundles/jquery")
@@ -29,7 +31,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <h1>
-                        <a class="navbar-brand" href="@Url.Action("Index","Default")">
+                        <a class="navbar-brand" href="@Url.Action("Index", "Default")">
                             <span class="fa fa-paw mr-2" aria-hidden="true"></span>
                             Pet Sitter
                         </a>
@@ -44,24 +46,35 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("Index","Default")">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="@Url.Action("Index", "Default")">Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="@Url.Action("About", "About")">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("Services","Services")">Services</a>
+                                <a class="nav-link" href="@Url.Action("Services", "Services")">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("Contact","Contact")">Contact</a>
+                                <a class="nav-link" href="@Url.Action("Contact", "Contact")">Contact</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="@Url.Action("Login","Login")">Login</a>
+                            <li class="nav-item dropdown">
+                                @{ 
+                                    HttpCookie cookie = Request.Cookies["userinfo"];
+                                }
+                                @if (cookie != null)
+                                 {
+                                    string username = Request.Cookies["userinfo"]["username"];
+                                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">@username</a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <a class="dropdown-item" href="@Url.Action("Logout","Login")">Logout</a>
+                                    </div>
+                                 }else
+                                 {
+                                    <a class="nav-link" href="@Url.Action("Login","Login")">Login</a>
+                                 }
                             </li>
                         </ul>
                     </div>
-            </div>
-
             </nav>
             </div>
         </header>
