--- a/PetServicesStore/Views/Default/index.cshtml
+++ b/PetServicesStore/Views/Default/index.cshtml
@@ -181,7 +181,7 @@
                     </div>
                 </div>
                 <div class="apply-form p-sm-5 p-4">
-                    <form action="initAppointment" method="post">
+                    <form action="~/Default/initAppointment" method="post">
                         <div class="admission-form">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="dog_name" placeholder="Dog's Name*" required>
