--- a/PetServicesStore/Views/Login/Login.cshtml
+++ b/PetServicesStore/Views/Login/Login.cshtml
@@ -3,23 +3,28 @@
     Layout = "~/Views/Shared/navigation.cshtml";
     ViewBag.Title = "Login";
 }
-    <div class="container-fluid overflow-hidden">
-        <div class="login-form-container row justify-content-center align-items-center" id="login-form-inner">
-            <form action="CheckUserName" method="post">
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username" name="username"/>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input name="password" type="password" class="form-control" id="password" aria-describedby="passwordHelp"/>
-                    <small id="passwordHelp" class="form-text text-muted">Password need to include normall charracter, capitalized and number </small>
-                </div>
-                <button type="submit" class="btn btn-success">Login</button>
-                <a href="@Url.Action("RegisterForm","Login")" class="btn btn-primary">Register</a>
-            </form>
-        </div>
+<div class="container-fluid overflow-hidden">
+    <div class="login-form-container row justify-content-center align-items-center" id="login-form-inner">
+        <form action="CheckUserName" method="post">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" id="username" name="username" />
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input name="password" type="password" class="form-control" id="password" aria-describedby="passwordHelp" />
+                <small id="passwordHelp" class="form-text text-muted">Password need to include normall charracter, capitalized and number </small>
+            </div>
+            <button type="submit" class="btn btn-success">Login</button>
+            <a href="@Url.Action("RegisterForm","Login")" class="btn btn-primary">Register</a>
+        </form>
     </div>
+    @if (Request.Cookies["loginResult"] != null)
+    {
+        <h1 class="text-center" style="transform: translateY(-430px); font-size: 20px; color: #f37603;">@Request.Cookies["loginResult"].Value</h1>
+        Request.Cookies["loginResult"].Expires = DateTime.Now.AddDays(-1);
+    }
+</div>
 
     <script src="~/Scripts/jquery-3.4.1.min.js"></script> <!-- Common jquery plugin -->
     <script src="~/Scripts/popper.min.js"></script> <!----Popper plugin-->
